--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,8 @@
 
     <string name="app_name">test</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="name">名前を入力</string>
     <string name="action_settings">Settings</string>
+    <string name="gender">性別</string>
 
 </resources>
