--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="name">名前を入力</string>
     <string name="action_settings">Settings</string>
     <string name="gender">性別</string>
+    <string name="spnPrompt">好きな子を選んでね。</string>
+    
 
 </resources>
