--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,10 +3,6 @@
 
     <string name="app_name">test</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="name">名前を入力</string>
     <string name="action_settings">Settings</string>
-    <string name="gender">性別</string>
-    <string name="spnPrompt">好きな子を選んでね。</string>
-    
-
+    <string name="spnPrompt">Aさん好きな子を選んでね。</string>    
 </resources>
