--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">test</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">せきがえタイム</string>
+    <string name="title_activity_main">せきがえタイム</string>
     <string name="action_settings">Settings</string>
     <string name="spnPrompt">Aさん好きな子を選んでね。</string>    
 </resources>
